Update requirements.txt for AI libraries
Replaced 'pypdf' and 'numpy' with 'scikit-learn' and added optional libraries for AI/Visualization.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 streamlit
 pandas
-pypdf
-numpy
+scikit-learn
+# Optional: Add libraries for specific AI/Visualization features
+# google-genai
+# openai
+# plotly
